[project]
name = "hyakvnc"
dynamic = ["version"]
description = "Create and manage VNC sessions on HYAK Klone."
authors = [
    {name = "Hansem Ro", email = "hansem7@uw.edu"},
]
dependencies = []
requires-python = ">=3.6"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
"Source Code" = "https://github.com/uw-psych/hyakvnc"
"Bug Tracker" = "https://github.com/uw-psych/hyakvnc/issues"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[project.scripts]
hyakvnc = "hyakvnc.cli:main"
